--- a/pom.xml
+++ b/pom.xml
@@ -7,56 +7,35 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
+
 	</parent>
-	<groupId>com.company</groupId>
-	<artifactId>microservice</artifactId> <!-- If you change this artifactId, change it too in Dockerfile -->
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>unir</groupId>
+	<artifactId>microservice</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+
 	<name>microservice</name>
 	<description>Straightforward archetype of Spring Microservice with Java. </description>
+	<packaging>pom</packaging>
+
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.0</spring-cloud.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+	<modules>
+		<module>discovery-server</module>
+		<module>api-gateway</module>
+		<module>movie-service</module>
+		<module>sala-service</module>
+	</modules>
+
+	<dependencies>
+
 	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
